<resources>
    <string name="app_name">Paysera Currency Exchanger</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="currency_converter">Currency Converter</string>
    <string name="my_balances">MY BALANCES</string>
    <string name="_1000_00_eur">1000.00 EUR</string>
    <string name="sell">Sell</string>
    <string name="submit">SUBMIT</string>
</resources>